--- a/estilo.css
+++ b/estilo.css
@@ -27,21 +27,25 @@ h1 {
 }
 
 .imagen1 {
+    padding: 30px;
     width: 350px;
     height: 350px;
 }
 
 .imagen2 {
+    padding: 30px;
     width: 350px;
     height: 350px;
 }
 
 .imagen3 {
+    padding: 30px;
     width: 350px;
     height: 350px;
 }
 
 .imagen4 {
+    padding: 30 px;
     width: 350px;
     height: 350px;
 
